--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -55,3 +55,63 @@
     font-size: 2.3rem;
     font-weight: 500;
 }
+
+.experience__content h2 {
+    font-size: 2.5rem;
+    margin-top: 1rem;
+    font-weight: 500;
+}
+
+.experience__content p {
+    font-size: 1.1rem;
+    color: var(--text-color);
+    margin-top: 1rem;
+}
+
+.counter__wrapper {
+    margin-top: 2.5rem;
+}
+
+.counter__box span {
+    width: 70px;
+    height: 70px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--primary-color);
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 600;
+    border-radius:10px 0px 10px 0px;
+}
+
+.counter__box h6 {
+    font-size: 1.1rem;
+    margin-top: 0.9rem;
+    color: var(--heading-color);
+}
+
+.experience__img img {
+    width: 90%;
+    object-fit: cover;
+}
+
+.gallery__title {
+    font-size: 2.3rem;
+    margin-bottom: 2.5rem;
+    margin-top: 1rem;
+}
+
+.masonry__img {
+    transition: 1s ease-in-out;
+}
+
+.masonry__img:hover {
+    transform: scale(1.05);
+}
+
+.testimonial__title {
+    font-size: 2.3rem;
+    margin-top: 1rem;
+}
